{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 29,
  "lineage": "b5deaa8c-1cd5-aae3-4cbc-7e2ebc9c1d36",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "core",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335631691830:vpc/vpc-02ac1308ff141a1e1",
            "cidr_block": "10.0.0.0/19",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-007dba7beedc5836e",
                "cidr_block": "10.0.0.0/19",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0fe186a0f33f78d61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "core"
                ]
              }
            ],
            "id": "vpc-02ac1308ff141a1e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f580587f2afd70e",
            "owner_id": "335631691830",
            "tags": {
              "Environment": "core",
              "Managed_by": "Terraform",
              "Name": "eu-west-1-core-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335631691830:vpc/vpc-0685a3518d0558c65",
            "cidr_block": "10.0.32.0/19",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-097a550889a63310d",
                "cidr_block": "10.0.32.0/19",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0fe186a0f33f78d61",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "live"
                ]
              }
            ],
            "id": "vpc-0685a3518d0558c65",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-011779aa28e83a193",
            "owner_id": "335631691830",
            "tags": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "eu-west-1-live-vpc",
              "Stack": "mesh"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "cluster_origin_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:loadbalancer/app/live-origin-alb/c91fe526afde4a13",
            "arn_suffix": "app/live-origin-alb/c91fe526afde4a13",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "live-origin-alb-499281960.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:loadbalancer/app/live-origin-alb/c91fe526afde4a13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "live-origin-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00a2ee61202d7633d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04499edd31134fed6"
              },
              {
                "subnet_id": "subnet-0564488db1301c616"
              },
              {
                "subnet_id": "subnet-082d1097e36744b29"
              }
            ],
            "subnets": [
              "subnet-04499edd31134fed6",
              "subnet-0564488db1301c616",
              "subnet-082d1097e36744b29"
            ],
            "tags": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "live-origin-alb",
              "Stack": "ecs"
            },
            "tags_all": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "live-origin-alb",
              "Stack": "ecs"
            },
            "vpc_id": "vpc-0685a3518d0558c65",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.cluster_origin_alb_sg",
            "data.aws_subnets.public",
            "data.aws_vpc.local"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cluster_origin_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:listener/app/live-origin-alb/c91fe526afde4a13/cbb0122623bbe19c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:listener/app/live-origin-alb/c91fe526afde4a13/cbb0122623bbe19c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:loadbalancer/app/live-origin-alb/c91fe526afde4a13",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.cluster_origin_alb",
            "aws_security_group.cluster_origin_alb_sg",
            "data.aws_subnets.public",
            "data.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "cluster_origin_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:listener/app/live-origin-alb/c91fe526afde4a13/cdf5312a47ab5ed9",
            "certificate_arn": "arn:aws:acm:eu-west-1:335631691830:certificate/9a33c6cd-8842-41ae-8027-ce8cdc32bb71",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "TLS Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:listener/app/live-origin-alb/c91fe526afde4a13/cdf5312a47ab5ed9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:335631691830:loadbalancer/app/live-origin-alb/c91fe526afde4a13",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert_validation",
            "aws_alb.cluster_origin_alb",
            "aws_route53_record.cert_validation",
            "aws_route53_record.cluster_origin_alb",
            "aws_security_group.cluster_origin_alb_sg",
            "data.aws_route53_zone.primary",
            "data.aws_subnets.public",
            "data.aws_vpc.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_origin_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335631691830:security-group/sg-00a2ee61202d7633d",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [],
            "id": "sg-00a2ee61202d7633d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "live-origin-alb-sg",
            "name_prefix": "",
            "owner_id": "335631691830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "live-origin-alb-sg",
              "Stack": "ecs"
            },
            "tags_all": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "live-origin-alb-sg",
              "Stack": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0685a3518d0558c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.local"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:335631691830:security-group/sg-0f1b7467d79b05acb",
            "description": "ECS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic to the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1b7467d79b05acb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/19"
                ],
                "description": "Ping access from Core",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/19"
                ],
                "description": "SSH access from Core",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "live-ecs",
            "name_prefix": "",
            "owner_id": "335631691830",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "eu-west-1-ecs-live",
              "Stack": "ecs"
            },
            "tags_all": {
              "Environment": "live",
              "Managed_by": "Terraform",
              "Name": "eu-west-1-ecs-live",
              "Stack": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0685a3518d0558c65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.current",
            "data.aws_vpc.core",
            "data.aws_vpc.local"
          ]
        }
      ]
    }
  ]
}